final slides for group meeting

--- a/index.html
+++ b/index.html
@@ -406,6 +406,19 @@ strong {
 
 <slide class="" id="slide-19" style="background:;">
   <hgroup>
+    <h2>Plot everything</h2>
+  </hgroup>
+  <article data-timings="">
+    <p>These 4 datasets give identical linear regressions. But differences are obvious. So models&#39; summary statistics are not enough: <a href="http://blog.plot.ly/post/68951620673/why-graph-anscombes-quartet">plot everything!</a></p>
+
+<p><img src="assets/fig/anscombe.png" alt=""></p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="" id="slide-20" style="background:;">
+  <hgroup>
     <h2>Summary</h2>
   </hgroup>
   <article data-timings="">
@@ -419,7 +432,7 @@ strong {
 <li><p>Generate global model or (small) set of candidate models</p>
 
 <ul>
-<li>Avoid all-subsets</li>
+<li>Avoid stepwise and all-subsets</li>
 <li>Don&#39;t assume linear effects: think about appropriate functional relationships</li>
 <li>Consider interactions for strong main effects</li>
 </ul></li>
@@ -437,7 +450,7 @@ strong {
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-20" style="background:;">
+<slide class="" id="slide-21" style="background:;">
   <hgroup>
     <h2>To read more</h2>
   </hgroup>
@@ -456,7 +469,7 @@ strong {
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-21" style="background:;">
+<slide class="" id="slide-22" style="background:;">
   <hgroup>
     <h2>To read more</h2>
   </hgroup>
@@ -473,7 +486,7 @@ strong {
   <!-- Presenter Notes -->
 </slide>
 
-<slide class="" id="slide-22" style="background:;">
+<slide class="" id="slide-23" style="background:;">
   <hgroup>
     <h2>END</h2>
   </hgroup>
@@ -600,13 +613,13 @@ strong {
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=19 title='Summary'>
+        data-slide=19 title='Plot everything'>
          19
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=20 title='To read more'>
+        data-slide=20 title='Summary'>
          20
       </a>
     </li>
@@ -618,8 +631,14 @@ strong {
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=22 title='END'>
+        data-slide=22 title='To read more'>
          22
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=23 title='END'>
+         23
       </a>
     </li>
   </ul>
