--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ strong {
 <ul class = "build incremental">
 <li><p>Larger penalty with large datasets (favouring simpler models)</p></li>
 <li><p>Not intended for assessing out-of-sample model performance</p></li>
-<li><p>Problematic (e.g. Burnham et al. 2011, or Gelman et al. 2013 do not recommend it).</p></li>
+<li><p>Problematic (e.g. Burnham et al. 2011, or Gelman et al. 2013 do not recommend it; but see Link &amp; Barker 2006).</p></li>
 </ul>
 
   </article>
@@ -279,7 +279,7 @@ strong {
 <li>Measurement error can seriously complicate things (Biggs et al 2009; Freckleton 2011)</li>
 </ul></li>
 <li><p>For predictors with large effects, consider interactions.</p></li>
-<li><p>See also Zuur et al 2009.</p></li>
+<li><p>See also Zuur et al 2010.</p></li>
 </ul>
 
   </article>
@@ -398,6 +398,7 @@ strong {
 <li><p>In ecology, everything is different. Finding a significant difference will mostly depend on your sample size (and researchers&#39; degrees of freedom; Simmons et al 2011).</p></li>
 <li><p>Type S (Sign): estimating effect in opposite direction.</p></li>
 <li><p>Type M (Magnitude): Misestimating magnitude of the effect (under or overestimating).</p></li>
+<li><p>Avoid also Type III error (Dangles &amp; Casas 2012): finding right answer to the wrong question!</p></li>
 </ul>
 
   </article>
